LinkedHashMap refactor